--- a/device/CMakeLists.txt
+++ b/device/CMakeLists.txt
@@ -7,7 +7,9 @@ set(src
   ${unabto_src}
   ${unabto_module_cli_gopt_src}
   ${unabto_module_fingerprint_acl_src}
+  ${unabto_module_stateful_push_service_src}
   ${unabto_module_read_hex}
+  ${UNABTO_MODULES_SRC_DIR}/util/read_hex.c
   ${CMAKE_CURRENT_SOURCE_DIR}/src/unabto_main.c
   ${CMAKE_CURRENT_SOURCE_DIR}/src/unabto_application.c
 )
@@ -18,6 +20,7 @@ include_directories(
 )
 
 add_definitions(${unabto_definitions})
+add_definitions("-DUNABTO_PUSH_CALLBACK_FUNCTIONS")
 
 add_executable(${PROJECT_NAME} ${src})
 
