--- a/firebase-ios/GoogleService-Info.plist
+++ b/firebase-ios/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>366248731893-b039fvnhmnduup3p1ldsveb5nkjpatt2.apps.googleusercontent.com</string>
+	<string>203225492464-97dkg05m9r23vkptjkl4eiq615t8srk3.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.366248731893-b039fvnhmnduup3p1ldsveb5nkjpatt2</string>
+	<string>com.googleusercontent.apps.203225492464-97dkg05m9r23vkptjkl4eiq615t8srk3</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCl9w5zonOE-uI3fTUNMgrj8dCojhPLhpw</string>
+	<string>AIzaSyCTm2-kyQ_mk-ze6SV65TiGuN1K43DXr5A</string>
 	<key>GCM_SENDER_ID</key>
-	<string>366248731893</string>
+	<string>203225492464</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.nabto.push-example</string>
 	<key>PROJECT_ID</key>
-	<string>fir-push-test-nng-grmbl</string>
+	<string>nabto-push-example</string>
 	<key>STORAGE_BUCKET</key>
-	<string>fir-push-test-nng-grmbl.appspot.com</string>
+	<string>nabto-push-example.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:366248731893:ios:2ce4cf75fb061f65</string>
+	<string>1:203225492464:ios:2ce4cf75fb061f65</string>
 	<key>DATABASE_URL</key>
-	<string>https://fir-push-test-nng-grmbl.firebaseio.com</string>
+	<string>https://nabto-push-example.firebaseio.com</string>
 </dict>
 </plist>
