added ID based subscriptions

--- a/firebase-android/app/build.gradle
+++ b/firebase-android/app/build.gradle
@@ -19,6 +19,9 @@ android {
     }
     productFlavors {
     }
+    sourceSets{
+        main.res.srcDirs +='src/main/../../../../common/'
+    }
 }
 
 dependencies {
